--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
+    <title> Flashcard </title>
+</head>
+  <body>
+    <main>
+      <section id="container">
+        <!-- <article class="cartao"> 
+          <div class="cartao__conteudo">
+            <h3> Programação </h3>
+            <div class="cartao_conteudo_pergunta">
+              <p> O que é JavaScript?</p>
+            </div>
+            <div class="cartao__conteudo_resposta">
+              <p> O JavaScript é uma linguagem de programação.</p>
+          </div>
+          </div>
+          </article> -->
+            </section>
+    </main>
+        <footer>
+          <p> Projeto desenvolvido pela Alura, sem fins lucrativos </p>
+        </footer>
+    <script src="app.js"></script>
+    <script src="perguntas.js"></script>
+  </body>
+</html>
 
